# SimDriveSate

./: .gitignore  README.md  config.yaml  data_generator.py  requirements-dev.txt  requirements-minimal.txt  requirements.txt  setup.cfg  utils.py
UI/: UI_Framework_Guide.md  component_manager.py  console_output_redirect.py  data_synchronizer.py  graphics_items.py  graphics_scene.py  image_control_widget.py  image_integration_interface.py  image_manager.py  interfaces.py  main.py  main_entry.py  main_window.py  right_panel.py  sate_layout_UI.md  sdf_backend.py  sidebar_panel.py  sidebar_panel_extension.py  temperature_model_interface.py  ui_constants.py  ui_utils.py  worker_thread.py
UI/backends/: __init__.py  base_backend.py  pod_temperature_backend.py  thermal_backend.py  voronoi_backend.py
UI/data_bridge/: __init__.py  data_validator.py  format_converter.py  json_handler.py
UI/visualization/: __init__.py  field_visualizer.py  plot_configs.py  thermal_plots.py
layout/: GibLS.py  README.md  SeqLS.py  data_generation.py  layout.py
model/: U_net.py  split_dataset.py  train.py
parasatellite/: Cascade.py  Flowpath.py  IO.py  Project.py  Row.py  Satellite_2d.py  Section.py  __init__.py  _utils.py
parasatellite/_io_methods/: geomturbo.py  tecplot.py
parasatellite/_param_methods/: axial_turbine.py
parasatellite/tests/: fp_test.py  project_test.py  row_test.py  section_test.py
parasatellite/tests/resources/: Flowpath.curve  section.yaml
parasatellite/tests/resources/project/: design_space.yaml  project.yaml
pod_simple/: API_README.md  README.md  api_examples.py  api_interface.py  data_utils.py  inference.py  pod_model.py  reconstruction.py  reconstruction_demo.py  reconstruction_visualization.py  requirements.txt  train.py  visualization.py
pythonForFenics/: data.py  demo_poisson2.py  fenics_solver.py  fenicsx_solver.py  heat_demo.py  test_fenicsx_solver.py
