# Setup configuration for 2D Satellite Layout Project

[metadata]
name = satellite-layout-2d
version = 1.0.0
description = 2D Satellite Component Layout Visualization and Physics Field Prediction
long_description = file: README.md
long_description_content_type = text/markdown
author = Satellite Layout Team
author_email = team@satellite-layout.com
url = https://github.com/satellite-team/2d-satellite-layout
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Scientific/Engineering :: Physics

[options]
packages = find:
python_requires = >=3.8
install_requires =
    PyQt6>=6.4.0
    numpy>=1.21.0
    scipy>=1.7.0
    matplotlib>=3.5.0
    PyYAML>=6.0

[options.packages.find]
exclude =
    tests*
    docs*

[options.extras_require]
dev =
    pytest>=6.0.0
    pytest-qt>=4.0.0
    black>=22.0.0
    flake8>=4.0.0
    mypy>=0.950

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --verbose
    --tb=short
    --strict-markers
    --cov=UI
    --cov-report=term-missing
    --cov-report=html

[coverage:run]
source = UI
omit = 
    */tests/*
    */test_*.py
    */__pycache__/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError

[flake8]
max-line-length = 100
max-complexity = 10
ignore = 
    E203,  # whitespace before ':'
    W503,  # line break before binary operator
    E501   # line too long (handled by black)
exclude = 
    .git,
    __pycache__,
    docs,
    build,
    dist,
    .eggs,
    *.egg-info,
    .pytest_cache,
    .coverage

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True

[isort]
profile = black
multi_line_output = 3
line_length = 100
known_first_party = UI
known_third_party = PyQt6,numpy,scipy,matplotlib,yaml

[black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''